# fishbot

./: .replit  README.md  bot_core.py  direct_input.py  fishing_bot.py  gameplay_learner.py  gui_components.py  install.bat  logger.py  mock_environment.py  package-lock.json  pathfinding.py  pyproject.toml  replit.nix  start_bot.bat  test_bot.py
attached_assets/: Pasted--Setting-up-Fishing-Bot--1740330979881.txt  Pasted--Setting-up-Fishing-Bot--1740331836835.txt
fishbot/: bot_core.py  default_config.json  fishing_bot.py  gameplay_learner.py  gui_components.py  package.json  pathfinding.py  replit.nix  vision_system.py
